--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   provider: ^6.1.5+1
   go_router: ^16.2.4
+  get_it: ^8.2.0
 
 dev_dependencies:
   flutter_test:
