--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.1.5+1
   go_router: ^16.2.4
   get_it: ^8.2.0
+  diacritic: ^0.1.6
 
 dev_dependencies:
   flutter_test:
