--- a/ios/.gitignore
+++ b/ios/.gitignore
@@ -32,3 +32,9 @@ Runner/GeneratedPluginRegistrant.*
 !default.mode2v3
 !default.pbxuser
 !default.perspectivev3
+
+*.cer
+*.certSigningRequest
+*.mobileprovision
+*.p12
+*.p8
