--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -8,7 +8,10 @@ on:
 jobs:
   build:
     runs-on: macos-latest
-
+    if: |
+      github.event_name == 'workflow_dispatch' || 
+      (startsWith(github.ref, 'refs/tags/v') && contains(github.ref, '.') && !contains(github.ref, '-')) ||
+      (startsWith(github.ref, 'refs/tags/v') && endsWith(github.ref, '-ios'))
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
