--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -21,6 +21,9 @@ jobs:
         uses: actions/checkout@v5
         with:
           submodules: "true"
+      
+      - name: Fix Git
+        run: git config --global --add safe.directory $GITHUB_WORKSPACE
 
       - name: Setup java
         uses: actions/setup-java@v5
