--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           submodules: "true"
 
+      - name: Fix Git
+        run: git config --global --add safe.directory $GITHUB_WORKSPACE
+
       - name: Setup java
         uses: actions/setup-java@v5
         with:
