--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -18,9 +18,6 @@ jobs:
         with:
           submodules: "true"
 
-      - name: Fix Git
-        run: git config --global --add safe.directory $GITHUB_WORKSPACE
-
       - name: Setup java
         uses: actions/setup-java@v5
         with:
@@ -39,9 +36,7 @@ jobs:
         run: flutter build ipa --no-codesign
 
       - name: Compress Archives and IPAs
-        run: |
-          cd build
-          tar -czf ios_build.tar.gz ios
+        run: tar -czf build/ios_build.tar.gz build/ios
 
       - name: Release on GitHub
         uses: ncipollo/release-action@v1
