--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -12,8 +12,6 @@ jobs:
       github.event_name == 'workflow_dispatch' || 
       (startsWith(github.ref, 'refs/tags/v') && contains(github.ref, '.') && !contains(github.ref, '-')) ||
       (startsWith(github.ref, 'refs/tags/v') && endsWith(github.ref, '-android'))
-    container:
-      image: cimg/android:2025.10.1-ndk
 
     steps:
       - name: Checkout repository
@@ -52,7 +50,7 @@ jobs:
       - name: Sign Android Apk & Bundle files
         if: ${{ github.event_name == 'release'}}
         run: |
-          echo $ANDROID_HOME
+          ls -la $ANDROID_HOME
           export BUILD_TOOLS_DIR="$ANDROID_HOME/build-tools/35.0.1"
           "$BUILD_TOOLS_DIR/zipalign -c -v 4 build/app/outputs/flutter-apk/*.apk"
           printf '%s' "$ANDROID_SIGNING_KEY" | base64 -d > keystore.jks
