--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     if: |
       github.event_name == 'workflow_dispatch' || 
       (startsWith(github.ref, 'refs/tags/v') && contains(github.ref, '.') && !contains(github.ref, '-')) ||
