--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -84,6 +84,6 @@ jobs:
           serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
           packageName: com.github.meypod.al_quran
           releaseFiles: android/app/build/outputs/bundle/release/*.aab
-          track: internal
+          track: production
           status: draft
         #  changesNotSentForReview: true
