--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -42,7 +42,7 @@ jobs:
         run: flutter build windows --release --no-pub --suppress-analytics
       
       - name: Create msix for store
-        run: dart run msix:create --store --output-path ./
+        run: dart run msix:create --store --output-path ./windows_store.msix
 
       - name: list files
         run: ls -la
@@ -58,4 +58,4 @@ jobs:
           allowUpdates: true
           replacesArtifacts: true
           updateOnlyUnreleased: true
-          artifacts: "*.msix"
+          artifacts: windows_store.msix
