--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -4,6 +4,11 @@ on:
   release:
     types: [published]
   workflow_dispatch:
+    inputs:
+      tag:
+        description: 'Tag to upload artifacts to (leave empty for latest)'
+        required: false
+        default: ''
 
 jobs:
   build:
@@ -19,6 +24,17 @@ jobs:
         uses: actions/checkout@v5
         with:
           submodules: "true"
+
+      - name: Get latest tag
+        id: get_tag
+        shell: bash
+        run: |
+          TAG="${{ github.event.inputs.tag }}"
+          if [ -z "$TAG" ]; then
+            git fetch --tags
+            TAG=$(git tag --sort=-creatordate | head -n 1)
+          fi
+          echo "tag=$TAG" >> $GITHUB_OUTPUT
 
       - name: Setup java
         uses: actions/setup-java@v5
@@ -43,7 +59,7 @@ jobs:
       - name: Release on GitHub
         uses: ncipollo/release-action@v1
         with:
-          prerelease: true
+          tag: ${{ steps.get_tag.outputs.tag }}
           omitBody: true
           omitBodyDuringUpdate: true
           omitName: true
