fix: install required linux packages

--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Install packaging tools
         run: |
           sudo apt-get update
-          sudo apt-get install -y ruby ruby-dev build-essential rpm
+          sudo apt-get install -y ruby ruby-dev build-essential rpm libgtk-3-0 libblkid1 liblzma5
           sudo gem install --no-document fpm
           wget -O appimagetool https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage
           chmod +x appimagetool
