--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -1,4 +1,4 @@
-name: build & upload linux x86_64 artifacts
+name: build & upload linux artifacts
 
 on:
   release:
@@ -11,7 +11,7 @@ on:
         default: ''
 
 jobs:
-  build:
+  build_x64:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
