--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -43,10 +43,10 @@ jobs:
       - name: Install Flutter dependencies
         run: flutter pub get
 
-      - name: Install packaging tools
+      - name: Install required tools & pkgs
         run: |
           sudo apt-get update
-          sudo apt-get install -y ruby ruby-dev build-essential rpm libgtk-3-dev
+          sudo apt-get install -y ruby ruby-dev build-essential rpm libgtk-3-dev fuse libfuse2
           sudo gem install --no-document fpm
           wget -O appimagetool https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage
           chmod +x appimagetool
