fix: desktop entry

--- a/linux/al_quran.desktop
+++ b/linux/al_quran.desktop
@@ -3,5 +3,5 @@ Type=Application
 Name=Al-Quran
 Comment=a simple open-source ad-free Quran app
 Exec=al_quran
-Icon=al_quran.png
+Icon=al_quran
 Categories=Education;Religion;
