--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -118,4 +118,4 @@ jobs:
           allowUpdates: true
           replacesArtifacts: true
           updateOnlyUnreleased: false
-          artifacts: dist/*.deb,dist/*.rpm
+          artifacts: dist/*.deb,dist/*.rpm,dist/*.AppImage
