--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -95,6 +95,13 @@ jobs:
           ln -sf "/opt/$APP_NAME/$APP_NAME" "$STAGING_ROOT/usr/bin/$APP_NAME"
           mkdir -p "$DIST_DIR"
           for TARGET in deb rpm; do
+            if [ "$TARGET" = "deb" ]; then
+              ARCH="amd64"
+              DEPENDS=(-d "libgtk-3-0" -d "libblkid1" -d "liblzma5")
+            else
+              ARCH="x86_64"
+              DEPENDS=(-d "gtk3" -d "libblkid" -d "xz-libs")
+            fi
             OUTPUT_FILE="$DIST_DIR/${APP_NAME}_v${CLEAN_VERSION}_${ARCH}.${TARGET}"
             fpm -s dir -t "$TARGET" \
               -n "$APP_NAME" \
@@ -105,7 +112,8 @@ jobs:
               --url "https://github.com/$REPOSITORY" \
               --prefix "/" \
               --package "$OUTPUT_FILE" \
-              -C "$STAGING_ROOT" .
+              -C "$STAGING_ROOT" \
+              "${DEPENDS[@]}" .
           done
 
       - name: Release on GitHub
