--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -13,13 +13,19 @@ on:
 jobs:
   build_x64:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    if: |
+      github.event_name == 'workflow_dispatch' || 
+      (startsWith(github.ref, 'refs/tags/v') && contains(github.ref, '.') && !contains(github.ref, '-')) ||
+      (startsWith(github.ref, 'refs/tags/v') && endsWith(github.ref, '-android'))
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
         with:
           submodules: "true"
 
-      - name: Get latest tag
+      - name: Get tag
         id: get_tag
         shell: bash
         run: |
