--- a/linux/al_quran.appimage.desktop
+++ b/linux/al_quran.appimage.desktop
@@ -2,6 +2,6 @@
 Type=Application
 Name=Al-Quran
 Comment=a simple open-source Quran reader
-Exec=al_quran
+Exec=env LD_LIBRARY_PATH=/usr/bin/lib al_quran
 Icon=al_quran
 Categories=Education;X-Religion;
