--- a/linux/com.github.meypod.al_quran.flatpak.desktop
+++ b/linux/com.github.meypod.al_quran.flatpak.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Type=Application
 Name=Al-Quran
-Comment=a simple open-source ad-free Quran app
+Comment=a simple open-source Quran reader
 Exec=env LD_LIBRARY_PATH=/app/bin/lib al_quran
 Icon=com.github.meypod.al_quran
 Categories=Education;X-Religion;
