--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -82,7 +82,7 @@ jobs:
             cp "linux/al_quran.appimage.desktop" "$APPDIR/usr/share/applications/al_quran.desktop"
             chmod +x "$APPDIR/usr/bin/al_quran"
             chmod +x "$APPDIR/AppRun"
-            OUTPUT_FILE="$DIST_DIR/al_quran_v${CLEAN_VERSION}_x64.AppImage"
+            OUTPUT_FILE="$DIST_DIR/AlQuran-${CLEAN_VERSION}-x86_64.AppImage"
             ls -la "$APPDIR"
             ARCH=x86_64 VERSION="$CLEAN_VERSION" ./appimagetool "$APPDIR" "$OUTPUT_FILE"
 
