--- a/linux/al_quran.desktop
+++ b/linux/al_quran.desktop
@@ -3,5 +3,5 @@ Type=Application
 Name=Al-Quran
 Comment=a simple open-source Quran reader
 Exec=al_quran
-Icon=al_quran
+Icon=com.github.meypod.al_quran
 Categories=Education;X-Religion;
